Ensure risk-driven decisions include reason codes